--- a/manifest.json
+++ b/manifest.json
@@ -3,4 +3,5 @@
   "version_number": "1.0.0",
   "description": "[Translation] Suomi modi suomalaisille!",
   "dependencies": ["BepInEx-BepInExPack-5.4.2100"]
+  "website_url": "https://github.com/MisterVaTu/Finnishtranslation"
 }
